--- a/BasicForm/index.html
+++ b/BasicForm/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container">
       <div class="col-lg-auto align-items-center form-class">
+        <br clear="all">
         <h3 class="sign-in-header">Sign up for a new account</h3>
         <form>
           <div class="mb-3 row">
