--- a/BasicForm/index.html
+++ b/BasicForm/index.html
@@ -11,14 +11,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GenSpark Form</title>
   </head>
   <body>
     <div class="container">
       <div class="col-lg-auto align-items-center form-class">
         <br clear="all">
         <h3 class="sign-in-header">Sign up for a new account</h3>
-        <form>
+        <form  onsubmit="onSubmitClick(event)">
           <div class="mb-3 row">
             <div class="col-md-5 mb-3">
               <label for="firstNameLabel" class="form-label">First Name</label>
@@ -36,7 +36,7 @@
               <input
                 type="text"
                 class="form-control"
-                id="lastNameInput"
+                id="middleInitialInput"
                 aria-describedby="middle-initial"
               />
             </div>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-md-4 mb-3">
               <label for="stateLabel" class="form-label">State</label>
-              <select class="form-select" aria-label="state-selector">
+              <select id="stateSelector" class="form-select" aria-label="state-selector">
                 <option value="">Please Select</option>
                 <option value="AL">Alabama</option>
                 <option value="AK">Alaska</option>
@@ -163,5 +163,6 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </body>
 </html>
