--- a/BasicForm/index.html
+++ b/BasicForm/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="col-lg-auto align-items-center form-class">
         <br clear="all" />
-        <h3 class="sign-in-header">Sign up for a new account</h3>
+        <h3 class="header">Sign up for a new account</h3>
         <form onsubmit="onSubmitClick(event)">
           <div class="mb-3 row">
             <div class="col-md-5 mb-3">
