Fixed some of the validation issues

--- a/BasicForm/index.html
+++ b/BasicForm/index.html
@@ -159,7 +159,9 @@
                 class="form-control"
                 id="zipCodeInput"
                 aria-describedby="zip-code"
+                pattern="^\d{5}$"
               />
+              <div id="zipCodeHelp" class="form-text">Zip code must be a 5 digit number.</div>
             </div>
           </div>
           <div class="col-lg-auto text-align button-group">
